<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".core.ui.fragments.tool.ToolFragment">

    <LinearLayout
        android:id="@+id/upperBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">

            <ImageView
                android:id="@+id/seedSideNavButton"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_centerVertical="true"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/nav_bar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/tools"
                android:textColor="@color/brown_color_100"
                android:textSize="@dimen/_25sdp"
                android:textStyle="bold" />

        </RelativeLayout>

        <AutoCompleteTextView
            android:id="@+id/edtSearchViewSeed"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_34sdp"
            android:layout_margin="@dimen/_14sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:background="@drawable/light_button_bg"
            android:completionThreshold="2"
            android:drawableStart="@drawable/search_icon"
            android:drawableEnd="@drawable/ic_close_modes"
            android:drawablePadding="8dp"
            android:hint="@string/lbl_btn_textures"
            android:imeOptions="actionSearch"
            android:includeFontPadding="false"
            android:inputType="text"
            android:maxLines="1"
            android:padding="@dimen/_8sdp"
            android:popupBackground="@drawable/light_button_bg"
            android:textColor="@color/white_seed"
            android:textColorHint="@color/light_black_200"
            android:textCursorDrawable="@null" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/seed_category_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            tools:itemCount="1"
            tools:listitem="@layout/item_armor_category" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mainRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            tools:itemCount="1"
            tools:listitem="@layout/item_armor" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="FULL_BANNER"
        ads:adUnitId="@string/admob_adunit_id_valhiem"></com.google.android.gms.ads.AdView>
</RelativeLayout>